--- a/__posts/2019-12-01-pro - 복사본.md
+++ b/__posts/2019-12-01-pro - 복사본.md
@@ -2,10 +2,9 @@
 layout: post
 title:  "ESG Media Topic Classification"
 date:   2023-01-01
-tags: [project]
+tags: [2022year]
 ---
 
-[KESG Media Portal Site]()
 
 1. 목적 
 2. 문제점 리스트 
@@ -13,10 +12,6 @@ tags: [project]
 
 2.2 실제 사용 
 - 
-
-
-
-![adasdasdasd](/assets/2020/01_23/canberra.png)
 
 
 
